# dotfiles

./: .gitignore  README.md
fish/.config/fish/: config.fish
fish/.config/fish/conf.d/: eza.fish  pay_respects.fish
fish/.config/fish/functions/: fish_prompt.fish
ghostty/.config/ghostty/: config
ghostty/.config/ghostty/themes/: easestigmatism
hypr/.config/hypr/: .hyprland.conf.swp  hyprland.conf  hyprland.conf~  hyprpaper.conf
nixos/: configuration.nix  flake.nix  hardware-configuration.nix  home.nix  specialisations.nix  steam-mount.nix
nixos/apple-silicon-support/: flake.nix
nixos/hardware/: generic.nix  nvidia.nix
nixos/hosts/desktop/: configuration.nix  hardware-configuration.nix  steam-mount.nix
nixos/hosts/macbook/: asahi-render-auth.patch  configuration.nix  hardware-configuration.nix
nixos/mako/: config
nixos/niri/: config.kdl  hypridle.conf  hyprlock.conf  open-usb.sh  screenshot-region.sh  screenshot.sh  start-swaylock.sh  start-swww.sh
nixos/overlays/: pcsx2.nix
nixos/popover-shell/: Cargo.toml  flake.nix  polkit-nm-wheel.js  waybar-module.jsonc
nixos/popover-shell/src/: main.rs  network.rs  secret_agent.rs
nixos/popover-shell/ui/: wifi.slint
nixos/shared/: home.nix  system.nix
nixos/waybar/: calendar.css  config.jsonc  style.css
nixos/waybar/scripts/: battery.sh  bluetooth_picker.sh  cpu.sh  ethernet_status.sh  fans.sh  gpu.sh  sleep.sh  wifi_status.sh
nixos/wofi/: config  style.css
waybar/.config/waybar/: config.jsonc  style.css
waybar/.config/waybar/custom_modules/: power_menu.xml
(+9 files in other folders)
